[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/theme.tres" type="Theme" id=1]
[ext_resource path="res://avatares/juanseb.png" type="Texture" id=2]
[ext_resource path="res://scripts/Usuario.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Usuario" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnVolver" type="Button" parent="."]
margin_left = 35.0
margin_top = 35.0
margin_right = 110.0
margin_bottom = 81.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Volver"
__meta__ = {
"_edit_lock_": true
}

[node name="Titulo" type="Label" parent="."]
margin_left = 257.0
margin_top = 37.0
margin_right = 334.0
margin_bottom = 70.0
rect_scale = Vector2( 2.5, 2.5 )
text = "Mi Perfil"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Favoritos" type="Label" parent="."]
margin_left = 528.0
margin_top = 21.0
margin_right = 617.0
margin_bottom = 77.0
rect_scale = Vector2( 2, 2 )
text = "Fav
8"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Foto" type="TextureRect" parent="."]
margin_left = 210.0
margin_top = 150.0
margin_right = 510.0
margin_bottom = 450.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="."]
margin_left = 112.0
margin_top = 469.0
margin_right = 355.0
margin_bottom = 502.0
rect_scale = Vector2( 2, 2 )
text = "Juan Sebasti치n"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Estrellas" type="Label" parent="."]
margin_left = 153.0
margin_top = 549.0
margin_right = 242.0
margin_bottom = 605.0
rect_scale = Vector2( 2, 2 )
text = "xxooo
16"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnCatalogo" type="Button" parent="."]
margin_left = 227.0
margin_top = 689.0
margin_right = 364.0
margin_bottom = 735.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Cat치logo"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnChats" type="Button" parent="."]
margin_left = 516.0
margin_top = 689.0
margin_right = 598.0
margin_bottom = 735.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Chats"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnEditar" type="Button" parent="."]
margin_left = 419.0
margin_top = 562.0
margin_right = 511.0
margin_bottom = 608.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Edit"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnHistorial" type="Button" parent="."]
margin_left = 50.0
margin_top = 691.0
margin_right = 129.0
margin_bottom = 737.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Histo"
__meta__ = {
"_edit_lock_": true
}

[node name="Descripcion" type="Label" parent="."]
margin_left = 53.0
margin_top = 810.0
margin_right = 403.0
margin_bottom = 1001.0
rect_scale = Vector2( 1.75, 1.75 )
text = "soy un vendedor de juegos entretenidos, pero son m치s entretenidos si usted los compara oy칩?"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnLink" type="Button" parent="."]
margin_left = 79.0
margin_top = 1141.0
margin_right = 392.0
margin_bottom = 1187.0
rect_scale = Vector2( 1.75, 1.75 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "http:instagram/juansebastian.com"
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="BtnVolver" to="." method="_on_BtnVolver_pressed"]
[connection signal="pressed" from="BtnCatalogo" to="." method="_on_BtnCatalogo_pressed"]
[connection signal="pressed" from="BtnChats" to="." method="_on_BtnChats_pressed"]
[connection signal="pressed" from="BtnEditar" to="." method="_on_BtnEditar_pressed"]
[connection signal="pressed" from="BtnHistorial" to="." method="_on_BtnHistorial_pressed"]
[connection signal="pressed" from="BtnLink" to="." method="_on_BtnLink_pressed"]
